chore: minor fixes and changes + resolveKey method + docs